small jwt fix
